# BGNN_metadata

./: .gitignore  Pipfile  README.md  Training_model_notes  brightness.py  check_labels.py  contrast.py  enhanced_error.json  enhanced_error_copy.json  error_check.py  error_check.sh  find_fish.py  gen_metadata.py  gen_metadata.sh  mask.py  new_train.py  non_enhanced_error.json  non_enhanced_error_copy.json  old.py  pca.py  picture_viewer.ui  pixel_analysis.ui  pixel_analysis_checker.py  plot.py  process_imgs.py  profiler.py  pyproject.toml  replace_json.py  requirements.txt  tag_result_checker.py  test_model.py  train.sh  train_detectron.py  train_iterations.sh  train_model.py  train_model_labels.py  validate.py
.github/workflows/: deploy-image.yml  manual.yml
config/: Base-RCNN-FPN.yaml  config.json  enhance.json  mask_rcnn_R_50_FPN_3x.yaml  training_data.json  training_data.json.idigbio  training_data_all.json
datasets/: 1.json  10.json  1_labels.json  3.json  5.json  6.json  7.json  8.json  eyes.json  two_three.json  uwzm.json
gen_metadata_mini/: Dockerfile  README.md  demo_gen_metadata_with_sing.sh  detectron2_env.def  env_setup.sh  gen_metadata.def  gen_metadata_TT.py  gen_metadata_dev.py  load_models.sh
legacy_code/: Pipfile  README.md  brightness.py  check_labels.py  gen_metadata.py  picture_viewer.ui  profiler.py  tag_result_checker.py  train_iterations.sh
legacy_code/datasets/: 2.json  (+5 more)
paper/: .paper.tex.swp  fishImageAnalysisAbs.tex  paper.bbl  paper.bib  paper.blg  paper.tex  paper_DEB.bib  paper_DEB.tex  paper_new.tex  sample-acmsmall-conf.tex
(+20 files in other folders)
