[tool.poetry]
name = "drexel_metadata"
version = "0.3.0"
description = ""
authors = ["Joel Pepper <drjpepper@linux.com>"]

[tool.poetry.dependencies]
python = "^3.10"
#torch = { version = "=1.12.0+cu116", source = "pytorch" }
#torchvision = { version = "=0.13.0+cu116", source = "pytorch" }
#torchvision = [
#	{url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.0%2Bcu116-cp310-cp310-linux_x86_64.whl"}
#]
#torch = [
#	{url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp310-cp310-linux_x86_64.whl"}
#]
#detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", tag = "v0.6" }
numpy = "^1.23.0"
Pillow = "*"
opencv-python = "^4.6.0"
ipython = "^8.4.0"
pandas = "^1.4.3"
iopath = "^0.1.9"
imutils = "^0.5.4"
jedi = "^0.18.1"
pytesseract = "^0.3.9"
pyenchant = "^3.2.2"
ninja = "^1.10.2"
#pycallgraph = "^1.0.1"
colorama = "^0.4.5"

#[[tool.poetry.source]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cu116/"
#secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
